<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingHorizontal="16dp"
	android:paddingBottom="24dp">

	<com.google.android.material.bottomsheet.BottomSheetDragHandleView
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnMenuRename"
		style="@style/Widget.Material3.Button.TextButton.Icon"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:gravity="start|center_vertical"
		android:text="@string/rename_app"
		android:textAppearance="?attr/textAppearanceBodyLarge"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_rename"
		app:iconPadding="16dp"
		app:iconSize="24dp"
		app:iconTint="?attr/colorOnSurfaceVariant" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnMenuExport"
		style="@style/Widget.Material3.Button.TextButton.Icon"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:gravity="start|center_vertical"
		android:text="@string/export_config"
		android:textAppearance="?attr/textAppearanceBodyLarge"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_backup"
		app:iconPadding="16dp"
		app:iconSize="24dp"
		app:iconTint="?attr/colorOnSurfaceVariant" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btnMenuImport"
		style="@style/Widget.Material3.Button.TextButton.Icon"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:gravity="start|center_vertical"
		android:text="@string/import_config"
		android:textAppearance="?attr/textAppearanceBodyLarge"
		android:textColor="?attr/colorOnSurface"
		app:icon="@drawable/ic_restore"
		app:iconPadding="16dp"
		app:iconSize="24dp"
		app:iconTint="?attr/colorOnSurfaceVariant" />

</LinearLayout>
